--- a/math.tex
+++ b/math.tex
@@ -1,13 +1,13 @@
 \section{Math}
-I am a happy fish
+I am a sad fish
 
 \begin{equation}
-	y = mx + b
+	y = mx + c
 \end{equation}
 
 \begin{gather}
-	\int_{0}^{10} x^2 \,dx \\
-	\sum_{0}^{N} e^x \,dx
+	\int_{0}^{2} x^2 \,dx \\
+	%\sum_{0}^{N} e^x \,dx
 \end{gather}
 
 Math is able to change here, which is pretty cool.
