--- a/floats.tex
+++ b/floats.tex
@@ -35,13 +35,13 @@ In the table, we can see that seaotturs are simply superior
 	\centering
 	\begin{tabular}{||c c c c||} 
 		\hline
-		Fish & Sealions & Seaotturs & Magic \\ [0.5ex] 
+		Fish & Sealions & Seaotturs & Magic \\ 
 		\hline\hline
 		1 & 6 & $\infty$ & $\omega$ \\ 
 		2 & 7 & $\infty$ & $\Omega$  \\
 		3 & 545 & $\infty$ & $\delta$  \\
 		4 & 545 & $\infty$ & $\alpha$  \\
-		5 & 88 & $\infty$ & $\beta$  \\ [1ex] 
+		5 & 88 & $\infty$ & $\beta$  \\
 		\hline
 	\end{tabular}
 	\caption{Table to test captions and labels. \cite{Otturs2020}}
